bin/tests/sema/compiler/assert_parser_error_recovery.swg
#assert(false && true) // swc-expected-error {{parser_err_unexpected_and_or}}
#assert(true || false) // swc-expected-error {{parser_err_unexpected_and_or}}
